--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -567,6 +567,9 @@ gIPALowBandwidthMbps=100
 gIPAMediumBandwidthMbps=400
 gIPAHighBandwidthMbps=800
 
+# Enable/Disable force bandwidth voting during IPA suspend
+gIPAForceVotingEnable=1
+
 # Enable/Disable rtt sta mac randomization
 enable_rtt_mac_randomization=1
 #ifdef VENDOR_EDIT
