--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -314,11 +314,6 @@ gMaxMediumTime = 6000
 # 802.11K support
 gRrmEnable=1
 
-#Enable Power Save offload
-# ifndef VENDOR_EDIT
-#gEnablePowerSaveOffload=2
-# endif VENDOR_EDIT
-
 #Enable firmware uart print
 gEnablefwprint=0
 
@@ -590,6 +585,12 @@ gcmp_enabled=0
 
 #Enable/Disable 802.11ai FILS support
 g_is_fils_enabled=0
+
+# Disable packet logging
+gEnablePacketLog=0
+
+# Enable/Disable bug on reinit
+g_bug_on_reinit_failure=0
 
 END
 
