--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -103,8 +103,8 @@ on boot
     setprop vendor.usb.controller a600000.dwc3
     setprop sys.usb.configfs 1
 
-on boot && property:persist.vendor.usb.controller.default=*
-    setprop vendor.usb.controller ${persist.vendor.usb.controller.default}
+#on boot && property:persist.vendor.usb.controller.default=*
+#    setprop vendor.usb.controller ${persist.vendor.usb.controller.default}
 
 #ifdef VENDOR_EDIT
    chmod 0660 /sys/devices/platform/soc/soc:qcom,dsi-display@18/dynamic_dsi_clock
