sdm845-common: lights: Make LED lights HAL actually start on enchilada
Apparently the new AIDL version of lights HAL (for notification LED) no longer
starts automatically, and needs a little help.

Guess we *probably* don't want it on fajita though, so test build props for
appropriate ro.product.system.device device name.

--- a/lights/android.hardware.light-service.oneplus_sdm845.rc
+++ b/lights/android.hardware.light-service.oneplus_sdm845.rc
@@ -6,6 +6,9 @@ on boot
     chown system system /sys/class/leds/green/lut_flags
     chown system system /sys/class/leds/blue/lut_flags
 
+on post-fs-data && property:ro.product.system.device=OnePlus6
+    start vendor.light-default
+
 service vendor.light-default /vendor/bin/hw/android.hardware.light-service.oneplus_sdm845
     class hal
     user system
