--- a/wifi/wpa_supplicant_overlay.conf
+++ b/wifi/wpa_supplicant_overlay.conf
@@ -10,3 +10,4 @@ bss_no_flush_when_down=1
 config_methods=virtual_display virtual_push_button keypad
 driver_param="no_rrm=1"
 driver_param=use_p2p_group_interface=1
+pmf=0
