Squash-revert recent WCNSS_qcom_cfg.ini changes since 10.9-test3
Reason for reverts: Overnight battery consumption is high again.
Probably worth investigating further which of these INI flags actually did it, but I don't have the time right now and need to release 10.9.

* Revert "[TEST] sdm845-common: wifi: ini: Enable/Disable Force Bandwidth Voting for IPA suspend"

  This reverts commit fd5f9ce1685f80fd2ae54de785ca0df67b687b3e.

* Revert "[TEST] sdm845-common: wifi: ini: set IPA bandwidth mbps threshold to higher number"

  This reverts commit 0e38a81b7bc11d77cca665a02cb42f7d992c5581.

* Revert "[TEST] sdm845-common: wifi: Enable PEER UNMAP CONF SUPPORT feature in INI file"

  This reverts commit 7a826a690481396d850c7b1770e46c0ea01f9f07.

* Revert "[TEST] sdm845-common: wifi: Add ini param for SNR monitoring as default and enable"

  This reverts commit e5b68d4cdb34c1288fabd724cc8069a7fb603011.

* Revert "[TEST] sdm845-common: wifi: ini: Enable NUD tracking feature in INI file"

  This reverts commit 9a3d3922ac896ac52bb3bf7a759f8075b66af065.

* Revert "[TEST] sdm845-common: wifi: ini: Remove TxPower2g and 5g from config file"

  This reverts commit 2d667131689bdd6bbcb66292d84a5c51429f95d7.

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -336,6 +336,10 @@ gEnableMCCAdaptiveScheduler=1
 #Enable or Disable p2p device address administered
 isP2pDeviceAddrAdministrated=0
 
+# Set Thermal Power limit
+TxPower2g=10
+TxPower5g=10
+
 # Remove Overlap channel restriction
 gEnableOverLapCh=0
 
@@ -505,14 +509,6 @@ ce_service_max_rx_ind_flush=1
 
 # Maximum number of MSDUs the firmware will pack in one HTT_T2H_MSG_TYPE_RX_IN_ORD_PADDR_IND
 maxMSDUsPerRxInd=8
-
-# Enable NUD tracking feature
-# 1 - enable 0 - disable(default)
-gEnableNUDTracking=1
-
-# Enable PEER UNMAP CONF SUPPORT
-# 1 - enable 0 - disable(default)
-gEnablePeerUnmapConfSupport=1
 ################ Datapath feature set End ################
 
 ################ NAN feature set start ###################
@@ -558,17 +554,6 @@ gActionOUIITOExtension=00037F 06 01010000FF7F FC 01 000AEB 02 0100 C0 01 000B86 
 #deepak.sehjpal@Connectivity, 2019/06/07,remove gEnableConcurrentSTA=wlan1 because do not support STA+SAP
 #gEnableConcurrentSTA=wlan1
 #endif VENDOR_EDIT
-
-#Enable/Disable SNR monitoring
-gEnableSNRMonitoring=1
-
-# Set IPA low/med/high bandwidth mbps
-gIPALowBandwidthMbps=100
-gIPAMediumBandwidthMbps=400
-gIPAHighBandwidthMbps=800
-
-# Enable/Disable force bandwidth voting during IPA suspend
-gIPAForceVotingEnable=1
 
 # Enable/Disable rtt sta mac randomization
 enable_rtt_mac_randomization=1
